--- a/views/simulation.templ
+++ b/views/simulation.templ
@@ -14,11 +14,13 @@ templ SimulationPage(params simulation.SimulationParameters) {
         <title>Genetic Fish Simulation</title>
         <link type="css" rel="stylesheet" href="/static/css/styles.css" />
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body>
-        <div id="simulation-container" style="width: 100%; height: 50vh;">
-            <canvas id="fishtank"></canvas>
-        </div>
+        <div id="simulation-timer" style="font-size: 1.2em; font-weight: bold; text-align: center; margin-bottom: 10px;">Elapsed Time: 00:00:00</div>
+      <div id="simulation-container" style="width: 100%;">
+          <canvas id="fishtank"></canvas>
+      </div>
         <div id="controls-container">
             <h1>Genetic Fish Simulation</h1>
             @SimulationContent(params)
@@ -52,11 +54,12 @@ templ SimulationContent(params simulation.SimulationParameters) {
 
         <button type="button" id="start-simulation">Start Simulation</button>
     </form>
-
     <div id="simulation-controls">
         <label for="simulation-speed">Simulation Speed: <span id="speed-display">1.0x</span></label>
         <input type="range" id="simulation-speed" min="0.1" max="5" step="0.1" value="1">
     </div>
-
     <div id="stats"></div>
+    <canvas id="fishChart" width="400" height="200"></canvas>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 }
+
