--- a/views/simulation.templ
+++ b/views/simulation.templ
@@ -15,6 +15,7 @@ templ SimulationPage(params simulation.SimulationParameters) {
         <link type="css" rel="stylesheet" href="/static/css/styles.css" />
         <script src="https://unpkg.com/htmx.org@1.9.10"></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
         <div id="simulation-timer" style="font-size: 1.2em; font-weight: bold; text-align: center; margin-bottom: 10px;">Elapsed Time: 00:00:00</div>
@@ -31,6 +32,7 @@ templ SimulationPage(params simulation.SimulationParameters) {
         <script src="/static/js/simulation-stats.js"></script>
         <script src="/static/js/genetic-fish-simulation.js"></script>
         <script src="/static/js/ui-controller.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
     </html>
 }
