--- a/templates/simulation_content.html
+++ b/templates/simulation_content.html
@@ -1,20 +1,20 @@
 {# templates/simulation_content.html #}
-
+<div>
 <form id="simulation-form">
-    <label for="populationSize">Initial Population Size:</label>
-    <input type="number" id="populationSize" name="populationSize" value="{{ params.population_size }}" min="1" max="100" /><br />
+    <label for="population_size">Initial Population Size:</label>
+    <input type="number" id="population_size" name="population_size" value="{{ params.population_size }}" min="1" max="100" /><br />
 
-    <label for="mutationRate">Mutation Rate:</label>
-    <input type="number" id="mutationRate" name="mutationRate" step="0.01" value="{{ '%.2f'|format(params.mutation_rate) }}" min="0" max="1" /><br />
+    <label for="mutation_rate">Mutation Rate:</label>
+    <input type="number" id="mutation_rate" name="mutation_rate" step="0.01" value="{{ '%.2f'|format(params.mutation_rate) }}" min="0" max="1" /><br />
 
-    <label for="crossoverRate">Crossover Rate:</label>
-    <input type="number" id="crossoverRate" name="crossoverRate" step="0.01" value="{{ '%.2f'|format(params.crossover_rate) }}" min="0" max="1" /><br />
+    <label for="crossover_rate">Crossover Rate:</label>
+    <input type="number" id="crossover_rate" name="crossover_rate" step="0.01" value="{{ '%.2f'|format(params.crossover_rate) }}" min="0" max="1" /><br />
 
-    <label for="foodAvailability">Food Generation Rate (items/second):</label>
-    <input type="number" id="foodAvailability" name="foodAvailability" step="0.1" value="{{ '%.1f'|format(params.food_availability) }}" min="0.1" max="10" /><br />
+    <label for="food_availability">Food Generation Rate (items/second):</label>
+    <input type="number" id="food_availability" name="food_availability" step="0.1" value="{{ '%.1f'|format(params.food_availability) }}" min="0.1" max="10" /><br />
 
-    <label for="waterTemperature">Water Temperature (°C):</label>
-    <input type="number" id="waterTemperature" name="waterTemperature" step="0.1" value="{{ '%.1f'|format(params.water_temperature) }}" min="0" max="40" /><br />
+    <label for="water_temperature">Water Temperature (°C):</label>
+    <input type="number" id="water_temperature" name="water_temperature" step="0.1" value="{{ '%.1f'|format(params.water_temperature) }}" min="0" max="40" /><br />
 
 
     <div class="form-group">
