--- a/templates/simulation_page.html
+++ b/templates/simulation_page.html
@@ -30,10 +30,11 @@
         {% include "simulation_content.html" %}
     </div>
 
+    <script src="{{ url_for('static', path='js/utils.js') }}"></script>
     <script src="{{ url_for('static', path='js/simulation-logger.js') }}"></script>
-    <script src="{{ url_for('static', path='js/genetic-fish-simulation.js') }}"></script>
-    <script src="{{ url_for('static', path='js/fish.js') }}"></script>
     <script src="{{ url_for('static', path='js/simulation-stats.js') }}"></script>
+    <script src="{{ url_for('static', path='js/fish.js') }}"></script>
+    <script src="{{ url_for('static', path='js/genetic-fish-simulation.js') }}"></script>
     <script src="{{ url_for('static', path='js/ui-controller.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
