--- a/templates/simulation_content.html
+++ b/templates/simulation_content.html
@@ -126,7 +126,6 @@
   </div>
 
     <script>
-    // Add this to ensure event log functionality
     window.addEventListener('load', () => {
     document.querySelector('.event-log-header').addEventListener('click', () => {
         document.querySelector('.event-log-content').classList.toggle('minimized');
@@ -397,7 +396,7 @@
     font-weight: 600;
 }
 
-/* Stats Overview Refinements */
+/* Stats Overview */
 .stats-overview {
     background: white;
     border-radius: 15px;
