--- a/templates/simulation_content.html
+++ b/templates/simulation_content.html
@@ -160,21 +160,6 @@
         </div>
 
 
-    <!-- Toast Navigation Buttons -->
-    <button id="scrollToEducation" class="scroll-button scroll-down">
-        <span class="button-content">
-            Learn About Evolution
-            <span class="scroll-icon">↓</span>
-        </span>
-    </button>
-
-    <button id="scrollToSimulation" class="scroll-button scroll-up">
-        <span class="button-content">
-            Back to Simulation
-            <span class="scroll-icon">↑</span>
-        </span>
-    </button>
-
     <!-- Navigation Toast -->
     <div id="navToasts" class="nav-toasts-container">
         <div id="goToEducation" class="nav-toast">
@@ -183,7 +168,7 @@
             </button>
             <div class="nav-toast-content">
                 <span class="nav-icon">📚</span>
-                <span class="nav-text">Learn About Neuroevolution</span>
+                <span class="nav-text">Learn More</span>
                 <button class="nav-action">Go ↓</button>
             </div>
         </div>
